--- a/package.json
+++ b/package.json
@@ -6,11 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier-write": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\"",
+    "prettier-check": "prettier --check \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@appsignal/javascript": "^1.3.25",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@tanstack/react-query": "^4.26.1",
+    "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
+    "jspdf": "^2.5.1",
+    "papaparse": "^5.4.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
