Got login working and session provider

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # .env.production
-LOGIN_DOMAIN=https://api.skipapi.io
-API_DOMAIN=https://reporting.getskip.com
-ONBOARDING_DOMAIN=https://onboarding.getskip.com
-ASSIMILATOR_DOMAIN=https://upload.skipapi.io
-APPSIGNAL_API_KEY=cb43572b-e741-43e8-8742-426147e66c7a
+VITE_LOGIN_DOMAIN=https://api.skipapi.io
+VITE_API_DOMAIN=https://reporting.getskip.com
+VITE_ONBOARDING_DOMAIN=https://onboarding.getskip.com
+VITE_ASSIMILATOR_DOMAIN=https://upload.skipapi.io
+VITE_APPSIGNAL_API_KEY=cb43572b-e741-43e8-8742-426147e66c7a
