--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@heroicons/react": "^2.0.16",
     "@tanstack/react-query": "^4.26.1",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "jspdf": "^2.5.1",
     "papaparse": "^5.4.0",
     "postcss": "^8.4.21",
@@ -24,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
