--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
