--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@tanstack/react-query": "^4.26.1",
+    "@tanstack/router": "^0.0.1-beta.83",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
