--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -138,6 +138,11 @@ steps:
   - name: "gcr.io/cloud-builders/kubectl"
     args: ["apply", "-f", "./ingress.yaml"]
     dir: .
+    env:
+      [
+        "CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER}",
+        "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
+      ]
   - name: "gcr.io/cloud-builders/kubectl"
     args: ["apply", "-f", "./app-deployment.yaml"]
     dir: .
