--- a/deployment.yaml.template
+++ b/deployment.yaml.template
@@ -16,4 +16,4 @@ spec:
       containers:
         - name: portal
           tty: true
-          image: "gcr.io/$PROJECT_ID/${IMAGE_NAME}:$COMMIT_SHA"
+          image: "gcr.io/$PROJECT_ID/${IMAGE_NAME}"
