--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,13 +12,7 @@ steps:
       ]
   - name: gcr.io/cloud-builders/gcloud
     dir: .
-    args:
-      [
-        "builds",
-        "submit",
-        "--tag",
-        "gcr.io/skip-sandbox/${_IMAGE_NAME}",
-      ]
+    args: ["builds", "submit", "--tag", "gcr.io/skip-sandbox/${_IMAGE_NAME}"]
   - name: "gcr.io/$PROJECT_ID/envsubst"
     dir: .
     entrypoint: /bin/bash
@@ -147,8 +141,6 @@ steps:
         "CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER}",
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
-images:
-  - "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
 options:
   machineType: "N1_HIGHCPU_8"
 timeout: 25m
