--- a/nginx.conf
+++ b/nginx.conf
@@ -1,36 +1,19 @@
 worker_processes 4;
 
-events { worker_connections 1024; }
+events {
+	worker_connections 1024;
+}
 
 http {
-    server {
-        listen 5173;
+	server {
+		listen 8080;
+		server_name admin-test.getskip.com;
+		root /usr/share/nginx/html;
+		index /index.html;
+		include /etc/nginx/mime.types;
 
-	gzip on;
-	gzip_disable "msie6";
-
-	gzip_comp_level 6;
-	gzip_min_length 1100;
-	gzip_buffers 16 8k;
-	gzip_proxied any;
-	gzip_types
-	    text/plain
-	    text/css
-	    text/js
-	    text/xml
-	    text/javascript
-	    application/javascript
-	    application/json
-	    application/xml
-	    application/rss+xml
-	    image/svg+xml;
-
-        root    /usr/share/nginx/html;
-	index   /index.html;
-	include /etc/nginx/mime.types;
-
-	location / {
-	    try_files $uri $uri/ /index.html;
+		location / {
+			try_files $uri $uri/ /index.html;
+		}
 	}
-    }
 }
