changed login domain

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # .env.production
-VITE_LOGIN_DOMAIN=https://api.skipapi.io
+VITE_LOGIN_DOMAIN=https://sandbox.skipapi.io
 VITE_API_DOMAIN=https://reporting.getskip.com
 VITE_ONBOARDING_DOMAIN=https://onboarding.getskip.com
 VITE_ASSIMILATOR_DOMAIN=https://upload.skipapi.io
