More env changes

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # .env.production
-VITE_LOGIN_DOMAIN=https://sandbox.skipapi.io
-VITE_API_DOMAIN=https://sandbox-reporting.getskip.com
+VITE_LOGIN_DOMAIN=https://api.sandbox-selfcheckout.app
+VITE_API_DOMAIN=https://reporting.sandbox-selfcheckout.app
 VITE_ONBOARDING_DOMAIN=https://api.sandbox-selfcheckout.app
 VITE_ASSIMILATOR_DOMAIN=https://upload.sandbox-selfcheckout.app
 VITE_APPSIGNAL_API_KEY=cb43572b-e741-43e8-8742-426147e66c7a
