--- a/kubernetes_config/cloudbuild.yaml
+++ b/kubernetes_config/cloudbuild.yaml
@@ -12,7 +12,13 @@ steps:
       ]
   - name: gcr.io/cloud-builders/gcloud
     dir: .
-    args: ["builds", "submit", "--tag", "gcr.io/skip-sandbox/${_IMAGE_NAME}:$COMMIT_SHA"]
+    args:
+      [
+        "builds",
+        "submit",
+        "--tag",
+        "gcr.io/skip-sandbox/${_IMAGE_NAME}:$COMMIT_SHA",
+      ]
   - name: "gcr.io/$PROJECT_ID/envsubst"
     dir: .
     entrypoint: /bin/bash
