--- a/kubernetes_config/cloudbuild.yaml
+++ b/kubernetes_config/cloudbuild.yaml
@@ -10,6 +10,20 @@ steps:
         "gcr.io/$PROJECT_ID/envsubst",
         ".",
       ]
+  - name: "gcr.io/cloud-builders/docker"
+    args:
+      [
+        "build",
+        "--build-arg",
+        "DEPLOY_ENV=${DEPLOY_ENV}",
+        "-f",
+        "./Dockerfile.deploy",
+        "-t",
+        "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA",
+        ".",
+      ]
+    dir: .
+    env: ["DEPLOY_ENV=${_DEPLOY_ENV}"]
   - name: gcr.io/cloud-builders/gcloud
     dir: .
     args:
@@ -22,7 +36,11 @@ steps:
   - name: "gcr.io/$PROJECT_ID/envsubst"
     dir: .
     entrypoint: /bin/bash
-    args: ["-c", "envsubst < ./deployment.yaml.template > app-deployment.yaml"]
+    args:
+      [
+        "-c",
+        "envsubst < ./kubernetes_config/deployment.yaml.template > ./kubernetes_config/app-deployment.yaml",
+      ]
     env:
       [
         "PROJECT_ID=$PROJECT_ID",
@@ -100,7 +118,7 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./kube-dns-configmap.yaml"]
+    args: ["apply", "-f", "./kubernetes_config/kube-dns-configmap.yaml"]
     dir: .
     env:
       [
@@ -108,7 +126,8 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./cluster-issuer-portal-staging.yaml"]
+    args:
+      ["apply", "-f", "./kubernetes_config/cluster-issuer-portal-staging.yaml"]
     dir: .
     env:
       [
@@ -116,7 +135,7 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./cluster-issuer-portal-prod.yaml"]
+    args: ["apply", "-f", "./kubernetes_config/cluster-issuer-portal-prod.yaml"]
     dir: .
     env:
       [
@@ -124,7 +143,7 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./ingress.yaml"]
+    args: ["apply", "-f", "./kubernetes_config/ingress.yaml"]
     dir: .
     env:
       [
@@ -132,7 +151,7 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./service.yaml"]
+    args: ["apply", "-f", "./kubernetes_config/service.yaml"]
     dir: .
     env:
       [
@@ -140,7 +159,7 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./app-deployment.yaml"]
+    args: ["apply", "-f", "./kubernetes_config/app-deployment.yaml"]
     dir: .
     env:
       [
