--- a/kubernetes_config/cloudbuild-production.yaml
+++ b/kubernetes_config/cloudbuild-production.yaml
@@ -28,7 +28,7 @@ steps:
         "builds",
         "submit",
         "--tag",
-        "gcr.io/skip-sandbox/${_IMAGE_NAME}:$COMMIT_SHA",
+        "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA",
       ]
   - name: "gcr.io/$PROJECT_ID/envsubst"
     dir: .
