--- a/kubernetes_config/cloudbuild-sandbox.yaml
+++ b/kubernetes_config/cloudbuild-sandbox.yaml
@@ -131,7 +131,7 @@ steps:
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
   - name: "gcr.io/cloud-builders/kubectl"
-    args: ["apply", "-f", "./kubernetes_config/ingress.yaml"]
+    args: ["apply", "-f", "./kubernetes_config/ingress.sandbox.yaml"]
     dir: .
     env:
       [
