--- a/kubernetes_config/cloudbuild-production.yaml
+++ b/kubernetes_config/cloudbuild-production.yaml
@@ -159,6 +159,8 @@ steps:
         "CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER}",
         "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}",
       ]
+images:
+  - "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA"
 options:
   machineType: "N1_HIGHCPU_8"
 timeout: 25m
