--- a/kubernetes_config/cloudbuild-sandbox.yaml
+++ b/kubernetes_config/cloudbuild-sandbox.yaml
@@ -14,8 +14,10 @@ steps:
     args:
       [
         "build",
+        "--build-arg",
+        "DEPLOY_ENV=sandbox",
         "-f",
-        "./Dockerfile.deploy.sandbox",
+        "./Dockerfile.deploy",
         "-t",
         "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$COMMIT_SHA",
         ".",
