--- a/kubernetes_config/cluster-issuer-portal-prod.yaml
+++ b/kubernetes_config/cluster-issuer-portal-prod.yaml
@@ -10,7 +10,6 @@ spec:
     privateKeySecretRef:
       name: production-issuer-portal-account-key
     solvers:
-      - dns01:
-          cloudDNS:
-            project: skip-sandbox
-
+      - http01:
+          ingress:
+            class: nginx
