--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "i18next": "^22.5.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
