--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@appsignal/javascript": "^1.3.25",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.29.6",
     "autoprefixer": "^10.4.14",
