wip: single-file-page

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,9 @@
 # .env.development
-VITE_LOGIN_DOMAIN=http://localhost:4500
-VITE_API_DOMAIN=http://localhost:4000
-VITE_ONBOARDING_DOMAIN=http://localhost:4004
-VITE_ASSIMILATOR_DOMAIN=http://localhost:8080
+VITE_LOGIN_DOMAIN=https://api.sandbox-selfcheckout.app # http://localhost:4500
+VITE_API_DOMAIN=https://sandbox-reporting.getskip.com # http://localhost:4000
+VITE_ONBOARDING_DOMAIN=https://sandbox-portal.getskip.com # http://localhost:4004
+VITE_ASSIMILATOR_DOMAIN=https://upload.sandbox-selfcheckout.app # http://localhost:8080
 VITE_APPSIGNAL_API_KEY=4c132a3d-a850-41e1-965e-55b57cd02b68
+
+# Custom
+VITE_INTERATIONS_DOMAIN=https://integrations.selfcheckout.app
