--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
