Trying to fix a failing build

--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -1,6 +1,6 @@
 FROM node:lts-alpine as builder
 
-COPY package.json ./
+COPY package.json yarn.lock ./
 RUN yarn
 RUN mkdir /app-ui
 RUN mv ./node_modules ./app-ui
