--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prepare": "husky install",
     "preview": "vite preview",
     "prettier-write": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\"",
-    "prettier-check": "prettier --check \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\""
+    "prettier-check": "prettier --check \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\"",
+    "test": "jest --passWithNoTests",
+    "test-watch": "jest --watch"
   },
   "dependencies": {
     "@appsignal/javascript": "^1.3.25",
@@ -44,6 +46,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^4.9.3",
