--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
