--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-i18next": "^12.3.1",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
