wip: create-file-page-v2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@components/*": ["./src/components/*"],
       "@contexts/*": ["./src/contexts/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@i18n/*": ["./src/i18n/*"],
       "@providers/*": ["./src/providers/*"],
       "@routes/*": ["./src/routes/*"],
       "@itypes/*": ["./src/types/*"],
