--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "prepare": "husky install",
     "preview": "vite preview",
+    "preprod": "yarn build && yarn preview",
     "prettier-write": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\"",
     "prettier-check": "prettier --check \"{src,__{tests,mocks}__}/**/*.{js,jsx,ts,tsx}\"",
     "test": "jest --passWithNoTests",
@@ -25,7 +26,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "i18next": "^22.5.1",
+    "i18next": "^21.9.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.0",
@@ -33,7 +34,8 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.0",
+    "react-drag-drop-files": "^2.3.10",
+    "react-i18next": "^11.18.5",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
